--- a/TeamStudy/API_Web/API_Web.css
+++ b/TeamStudy/API_Web/API_Web.css
@@ -3,12 +3,14 @@ header {
     height: 60px;
     background-color: #ffffff;
     position: sticky; top: 0;
+    
 }
 
 main {
     width: 800px;
-    height: 880px;
+    height: 840px;
     background-color: #d6eddf;
+    padding-top: 10px;
     
 }
 
@@ -16,13 +18,14 @@ section {
     width: 780px;
     height: 250px;
     background-color: ivory;
-    margin: 10px 10px 10px 10px;
+    margin: 0px 10px 10px 10px;
 }
 
 footer {
     width: 800px;
     height: 30px;
     background-color: blanchedalmond;
+    background-image: url("gggg.jpg");
 }
 
 .clear {
@@ -48,4 +51,8 @@ h4 {
     text-align: right;
     font-family: Times ;
     color: rgb(154, 158, 157);
+}
+
+p {
+
 }
