--- a/TeamStudy/API_Web/API_Web.css
+++ b/TeamStudy/API_Web/API_Web.css
@@ -1,25 +1,29 @@
 header {
-    width: 800px;
-    height: 60px;
+    width: 100%;
+    height: 25%;
     background-color: #ffffff;
     position: sticky; top: 0;
     opacity: 70%;
+    margin: 0 auto;
     
 }
 
 main {
-    width: 800px;
-    height: 840px;
-    background-color: #d6eddf;
+    width: 100%;
+    height: 1200px;
+    margin: 0 auto;
+    background-image: url(back.jpg);
+    background-repeat: repeat;
+    background-color: #ffffff;
     padding-top: 10px;
     
 }
 
 section {
-    width: 780px;
-    height: 250px;
+    width: 90%;
+    height: 50%;
     background-color: ivory;
-    margin: 0px 10px 10px 10px;
+    margin:0 auto;
 }
 
 footer {
@@ -54,6 +58,33 @@ h4 {
     color: rgb(154, 158, 157);
 }
 
-p {
-
+#div0{
+    width: 100px;
+    height: 100px;
+    margin-top: 120px;
+    margin-right: 180px;
+    margin-bottom: 150px; 
+    margin-left: 190px;
 }
+
+#div1{ 
+    margin: 20px 20px 2px 100px;
+    width: 600px;
+    height: 400px;
+    padding: 10px;
+    border: 2px solid #000000;
+    background-image: url("olafpng.png");
+    background-size: 600px 450px;
+    float: left;
+  }
+
+  #div2{
+    width: 100px;
+    height: 100px;
+    padding: 10px;
+    margin-top: 130px;
+    margin-right: 250px;
+    float: right;
+  }
+
+
