--- a/TeamStudy/API_Web/API_Web.css
+++ b/TeamStudy/API_Web/API_Web.css
@@ -3,6 +3,7 @@ header {
     height: 25%;
     background-color: #ffffff;
     position: sticky; top: 0;
+    z-index : 2;
     opacity: 70%;
     margin: 0 auto;
     
@@ -10,7 +11,8 @@ header {
 
 main {
     width: 100%;
-    height: 1200px;
+    /* height: 1200px; */
+
     margin: 0 auto;
     background-image: url(back.jpg);
     background-repeat: repeat;
@@ -21,8 +23,8 @@ main {
 
 section {
     width: 90%;
-    height: 50%;
-    background-color: ivory;
+    height: 500px; 
+    background-color: rgb(255, 255, 255);
     margin:0 auto;
 }
 
@@ -48,8 +50,8 @@ h1 {
 h3 {
     text-align: left;
     font-family: Arial, Helvetica, sans-serif;
-    color: #21a343;
-    border-left: 6px solid #287533;
+    color: #1f43e7;
+    border-left: 6px solid #465cdb;
 }
 
 h4 {
@@ -87,4 +89,9 @@ h4 {
     float: right;
   }
 
+  #result {
+    margin-left: 100px;
+    color: blue;
+    font-family: Georgia, 'Times New Roman', Times, serif, cursive;
+  }
 
