--- a/Team2_Tasks/BootStrap/startbootstrap-stylish-portfolio-gh-pages/css/styles.css
+++ b/Team2_Tasks/BootStrap/startbootstrap-stylish-portfolio-gh-pages/css/styles.css
@@ -11564,7 +11564,7 @@ footer.footer .social-link:hover {
   }
 }
 
-.service-icon {
+/* .service-icon {
   background-color: #fff;
   color: #1D809F;
   height: 7rem;
@@ -11573,4 +11573,4 @@ footer.footer .social-link:hover {
   line-height: 7.5rem;
   font-size: 2.25rem;
   box-shadow: 0 3px 3px 0 rgba(0, 0, 0, 0.1);
-}
+} */
