--- a/Team2_Task/BootStrap/myBootstrap/css/styles.css
+++ b/Team2_Task/BootStrap/myBootstrap/css/styles.css
@@ -11575,3 +11575,8 @@ footer.footer .social-link:hover {
   font-size: 2.25rem;
   box-shadow: 0 3px 3px 0 rgba(0, 0, 0, 0.1);
 }
+
+#size{
+ width: 40px;
+ height: 50px;
+}
